# weave

./: .agent.yaml  .gitignore  .weave.yaml.example  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  OPENAI_MODE.md  PUBLISHING.md  README.md  TOOLS.md  TOOL_SCHEMA_FIX.md  UNIFIED_EXECUTOR_CHANGES.md  V1_REFACTORING_SUMMARY.md  index.md  install.sh  pyproject.toml  setup.py  test_tools.py
.agent/: .env.example
.agent/prompts/: system.md
.github/workflows/: test.yml
docs/: GEMINI_SETUP.md  README.md  ROADMAP.md
docs/architecture/: extensibility.md  overview.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: cloud-deployment.md  dependencies.md  environment.md  installation.md  mcp.md  plugins.md  real-execution.md  resources.md  tool-calling.md  visualization.md  writing-configs.md
docs/planned-features/: README.md  deployment.md
docs/reference/: cli-commands.md  configuration.md  errors.md
examples/: TOOLS_AND_MCP.md  basic.agent.yaml  basic.weave.yaml  custom_plugin_example.py  data-processing.weave.yaml  deployment-production.weave.yaml  deployment-staging.weave.yaml  mcp-integration.weave.yaml  memory_example.weave.yaml  openrouter-demo.weave.yaml  research-pipeline.weave.yaml  tool-calling.weave.yaml
examples/agent-creator-mcp-example/: .agent.yaml  README.md  example_interaction.md
examples/coding-agent-example/: .agent.yaml  .weave.yaml  README.md
examples/coding-agent-example/.agent/knowledge/: code_review_checklist.md
examples/coding-agent-example/.agent/prompts/: code_generator.md
examples/coding-agent-example/.agent/skills/: refactoring.yaml  test_automation.yaml
examples/coding-agent-example/.weave/knowledge/: documentation_guide.md
examples/coding-agent-example/.weave/prompts/: requirements_analyzer.md
examples/coding-agent-example/.weave/skills/: clean_code.yaml
examples/content-creation-example/: .weave.yaml  README.md
examples/customer-support-example/: .agent.yaml  README.md
examples/data-processing-example/: .weave.yaml  README.md
examples/memory_example/: README.md
examples/memory_example/.agent/memory/: knowledge_keeper_memory.md
examples/research-assistant-example/: .agent.yaml  README.md
examples/resources_example/: .agent.yaml  .weave.yaml  README.md
examples/resources_example/.weave/knowledge/: brand_voice.md
examples/resources_example/.weave/prompts/: content_writer.md
examples/resources_example/.weave/skills/: seo_optimization.yaml
scripts/: run-ci.sh  setup-dev.sh
src/weave/: __init__.py  __main__.py
src/weave/api/: __init__.py  openai_server.py
src/weave/cli/: __init__.py  app.py  completion.py  output.py  setup.py
src/weave/core/: __init__.py  api_keys.py  exceptions.py  graph.py  memory.py  models.py  sessions.py
src/weave/deploy/: __init__.py  auth.py  manager.py  provider.py
src/weave/deploy/providers/: __init__.py  aws.py  docker.py  gcp.py
src/weave/parser/: __init__.py  config.py  env.py  resources.py
src/weave/plugins/: __init__.py  base.py  manager.py
src/weave/plugins/builtin/: __init__.py  data_cleaner.py  json_parser.py  markdown_formatter.py  openrouter.py  text_summarizer.py  web_search.py
src/weave/resources/: __init__.py  loader.py  models.py
src/weave/runtime/: __init__.py  executor.py  hooks.py  llm_executor.py  real_executor.py
src/weave/state/: __init__.py  manager.py  storage.py
src/weave/tools/: __init__.py  builtin.py  comprehensive.py  executor.py  mcp_client.py  models.py
tests/: test_config_behavior.py  test_examples.py  test_hooks.py  test_memory.py  test_resources.py
